--- a/src/main/LoggerVersionsverwaltung.properties
+++ b/src/main/LoggerVersionsverwaltung.properties
@@ -1,7 +1,7 @@
 handlers=java.util.logging.FileHandler,java.util.logging.ConsoleHandler
 java.util.logging.FileHandler.pattern=./versionsverwaltung%u.log
 .level=ALL
-java.util.logging.FileHandler.level=FINE
+java.util.logging.FileHandler.level=INFO
 java.util.logging.FileHandler.formatter=java.util.logging.XMLFormatter
 java.util.logging.ConsoleHandler.level=SEVERE
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
