--- a/src/main/LoggerVersionsverwaltung.properties
+++ b/src/main/LoggerVersionsverwaltung.properties
@@ -3,5 +3,5 @@ java.util.logging.FileHandler.pattern=./versionsverwaltung%u.%g.log
 .level=ALL
 java.util.logging.FileHandler.level=INFO
 java.util.logging.FileHandler.formatter=java.util.logging.XMLFormatter
-java.util.logging.ConsoleHandler.level=INFO
+java.util.logging.ConsoleHandler.level=SEVERE
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
