--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>de.fie_fro</groupId>
   <artifactId>versionsverwaltung</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1</version>
 
   <name>versionsverwaltung</name>
   <!-- FIXME change it to the project's website -->
